03-Mar-2015 Adding Bam.Core.TargetOverride attribute, which can be specified on a module declaration, allowing the platform and configuration to be overridden. This can be used, for example, for a module to indicate that it is 32-bit while in a 64-bit targeted mode.

11-Dec-2014 Removed C.ILinkerOptions.DynamicLibrary as you can tell if the module is a dynamic library from C.ILinkerOptions.OutputType as well as the module type.

10-Dec-2014 Adding C.Plugin as a new module type, deriving from C.DynamicLibrary. Plugins are explicitly loaded at runtime, rather than implicitly linked against executables. For VisualStudio projects (MSBuild style), the import libraries for Plugins are ignored in the link step for modules that depend on them.

09-Dec-2014 Apple Clang toolchains now supports response files.

08-Dec-2014 Upgraded BuildAMation .sln and .csprojs for Bam, Bam.Core, BamOptionGenerator to use VisualStudio 2013 Express. These should be compatible as far back as VS 2010 Express. .NET framework 4 is now used to build the code. This is compatible with Mono 3 and MonoDevelop 5.

08-Dec-2014 Adding Clang-Apple600 package for Xcode 6 support.

80-Dec-2014 Adding a C++11 test packages, Cxx11Test1-dev.

10-Nov-2014 Adding Gcc-4.8 package.

02-Nov-2014 Adding ICU package, for internationalization used by Qt5.

01-Nov-2014 Adding Qt-5.3.2 package.

30-Oct-2014 Relative package roots from definition files are now resolved to the package directory, not the working directory.

26-Oct-2014 Added QtCommon-5.x, and Qt-5.1.1, Qt-5.2.0, Qt-5.3.1 packages.

26-Oct-2014 Reversioned package QtCommon-dev to QtCommon-4.x.

11-Sep-2014 Added -pedantic command line option, to enable pedantic validation during dependency graph generation. Default is disabled.

08-Sep-2014 Non-keyword arguments to the Python test runner, of the form x.version=MMM will be added as arguments to each BuildAMation command line run as -x.version=MMM. Useful for things like the WindowsSDK.
